feat: Add basic logging
I've chosen to use structlog rather than logging because this is what we
use in the company I work at and I wanted to get more accointed with
that library.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ packages = [{include = "src"}]
 python = "^3.10"
 requests = "*"
 poetry = "*"
+structlog = "^23.1.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "*"
