--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,4 +46,4 @@ exclude = ["exploration", "build"]
 [tool.ruff]
 target-version = "py311"
 fix = true
-select = ["E", "F", "I"]
+select = ["E", "F", "I", "B"]
